unfortunately only -Xmx9m works